# coptic-arabic

./: .gitignore  README.md  flake.nix  pyproject.toml  requirements.txt  result
.github/workflows/: ci.yml
examples/arabic_armenian/src/arabic_armenian/: run.py
examples/coptic_arabic/: pyproject.toml
examples/coptic_arabic/src/coptic_arabic/: __init__.py  corpus_config.py  orthographies.py  run.py
output/: Co-occurrences (after alignment #9).csv  aligned_texts.pkl  phi (after alignment #9).csv
src/scriptalign/: __init__.py  align.py  corpus.py  em.py  formatting.py  io_.py  orthography.py  scoring.py
tests/: test_align.py  test_arabic_armenian_smoke.py  test_coptic_arabic_regression.py  test_corpus.py  test_orthography.py  test_scoring.py
tests/data/: occurrences_golden.npy  phi_golden.npy  tiny_parallel.csv
