[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scriptalign"
version = "0.1.0"
description = "Discover letter-level correspondences between two parallel orthographies via iterative φ-coefficient scoring and DP alignment."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Christian Casey" },
]
dependencies = [
    "numpy>=1.19",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["scriptalign*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
